fixed grid-gap to gap.

--- a/src/pages/accountPointsPage/AccountPointsPage.scss
+++ b/src/pages/accountPointsPage/AccountPointsPage.scss
@@ -88,7 +88,7 @@
 					grid-template-rows: auto auto auto auto;
 					border-bottom: 1px solid theme-var($greyLineColor);
 					height: auto;
-					grid-gap: 5px;
+					gap: 5px;
 
 					.pendingPointMobile {
 						display: grid;
